--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 body {
   background-image: url('../images/binding_dark.png');
+  min-height: 780px;
 }
 
 iframe {
   width: 100%;
-  height: 550px;
+  height: 450px;
 }
 
 .button-blue {
@@ -18,11 +19,11 @@ iframe {
   position:fixed;
   top:0;
   left:0;
-  background:rgba(0,0,0,0.7);
+  background:rgba(0,0,0,0.8);
   z-index:5;
   width:100%;
   height:100%;
-  padding: 30px 0 0 0;
+  padding: 15px 0 0 0;
 }
 
 #gameStartOverlay p, #gameStartOverlay h1,
@@ -35,7 +36,7 @@ iframe {
 #gameStartOverlay h1, #gameEndOverlay h1,
 #composerInfoOverlay h1 {
   font-size: 50px;
-  margin: 48px 10px 0 10px;
+  margin: 18px 10px 0 10px;
 }
 
 #gameStartOverlay p, #gameEndOverlay p,
@@ -53,7 +54,7 @@ iframe {
 
 #cardGameWrapper, #composerIframeWrapper {
   max-width: 655px;
-  margin: 30px auto 0 auto;
+  margin: 15px auto 0 auto;
 }
 
 #gameBoard {
@@ -62,7 +63,7 @@ iframe {
   background: #E0EEEE;
   border-spacing: 10px;
   border-collapse: separate;
-  margin: 30px auto 0 auto;
+  margin: 10px auto 0 auto;
   padding: 10px;
 }
 
@@ -82,7 +83,7 @@ iframe {
 #gameHeaderWrapper {
   width: 100%;
   height: 150px;
-  padding: 30px 0 6px 0;
+  padding: 0 0 6px 0;
 }
 
 #gameHeaderWrapper h1, #gameHeaderWrapper p {
@@ -104,7 +105,7 @@ iframe {
 
 #composerAudioWrapper {
   text-align: center;
-  margin: 30px 0 20px 0;
+  margin: 10px 0 15px 0;
 }
 
 #composerAudio {
@@ -114,7 +115,7 @@ iframe {
 
 #restartGameLink, #closeInfo {
   text-align: center;
-  margin: 20px auto 0 auto;
+  margin: 20px auto 20px auto;
   font-size: 15px;
   color: white;
   display: block;
